SkillLevels endpoint added
